--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "unique-filter",
   "version": "0.0.1",
-  "description": "file based unique set with predictable maximum memory usage",
+  "description": "filesystem based exact unique filter with predictable maximum memory usage",
   "main": "index.js",
   "scripts": {
     "test": "tap test/test.*.js -T"
